....I..... [ZBX-12793] fixed system compiler checks during source configuration (abs)
...G...... [ZBX-11970] fixed style for some enumerators and structure type declarations (abs, Andris)

--------------------------------------------------------------------------------
Changes for 3.4.8rc1

New features:

Bug fixes:
A.F....... [ZBX-12754] fixed undefined index error in map import (gcalenko)
..F....... [ZBX-13166] fixed daily and yearly notification reports not including current day/last day of leap-year (nikita)
.......PS. [ZBX-13498] added optional MySQL upgrade patch for "problem" table to drop redundant index after another index that can be used to enforce the foreign key constraint has been created (vso)
........S. [ZBX-13452] fixed Elasticsearch history storage default value types (viktors)
..F....... [ZBX-12941] fixed checkbox overlay's position over the checkbox (miks)
..F....... [ZBX-13334] fixed translations of Widget parameters window (agriscenko)
A......... [ZBX-13248] changed field trapper_hosts to optional for trapper item.create (ashubin)
..F....... [ZBX-13307] fixed map scaling and position to the widget left side (ashubin)
A......... [ZBX-6118] fixed poor performance of changing an item on the template which linked with many hosts (Sasha)
..F....... [ZBX-13141] fixed invalid value for "Update interval" field in mass update form on submit was redirecting to items list (gcalenko)

--------------------------------------------------------------------------------
Changes for 3.4.7

3.4.7rc2 was released as 3.4.7 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.7rc2

Bug fixes:
.......P.. [ZBX-13403] allowed proxy to execute remote commands on agents using encrypted connection (gleb)
.......PS. [ZBX-13441] fixed crashes in case of failures (e.g. timeouts) during VMware hypervisor discovery (gleb)