@@ -220,14 +220,14 @@ class CDashboardWidgetMap extends CDiv {
 
 			if ($this->previous_map) {
 				$go_back_div = (new CDiv())
-					->addClass('btn-back-map-container')
+					->addClass(ZBX_STYLE_BTN_BACK_MAP_CONTAINER)
 					->addItem(
 						(new CLink(
 							(new CSpan())
-								->addClass('btn-back-map')
-								->addItem((new CDiv())->addClass('btn-back-map-icon'))
+								->addClass(ZBX_STYLE_BTN_BACK_MAP)
+								->addItem((new CDiv())->addClass(ZBX_STYLE_BTN_BACK_MAP_ICON))
 								->addItem((new CDiv())
-									->addClass('btn-back-map-content')
+									->addClass(ZBX_STYLE_BTN_BACK_MAP_CONTENT)
 									->addItem(_s('Go back to %1$s', $this->previous_map['name']))
 								),
 								'javascript: navigateToSubmap('.$this->previous_map['sysmapid'].', "'.
