@@ -3360,6 +3360,7 @@ $form-icon-btn: (
 	text-align: left;
 	position: absolute;
 	left: -1px;
+	max-width: 100%;
 
 	a {
 
@@ -3375,6 +3376,8 @@ $form-icon-btn: (
 					display: inline-block;
 					line-height: 24px;
 					padding: 0 6px 0 0;
+					flex: auto;
+					@extend %overflow-ellipsis;
 				}
 			}
 		}
@@ -3387,7 +3390,7 @@ $form-icon-btn: (
 		color: $btn-back-text-color;
 		margin-top: 10px;
 		padding: 0;
-		display: inline-block;
+		display: flex;
 		height: 24px;
 		line-height: 24px;
 		vertical-align: middle;
@@ -3400,6 +3403,7 @@ $form-icon-btn: (
 		.btn-back-map-icon {
 			margin-left: 5px;
 			display: inline-block;
+			flex: 1 0 auto;
 			width: 28px;
 			height: 24px;
 			vertical-align: middle;
